@@ -79,16 +79,30 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.15.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.net.http</arg>
+                        <arg>--add-reads</arg>
+                        <arg>de.sfuhrm.gocryptfs4j=java.net.http</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.6</version>
+                <configuration>
+                    <argLine>${jacoco.argLine} --add-modules java.net.http --add-reads de.sfuhrm.gocryptfs4j=java.net.http</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.5.6</version>
+                <configuration>
+                    <argLine>${jacoco.argLine} --add-modules java.net.http --add-reads de.sfuhrm.gocryptfs4j=java.net.http</argLine>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -108,12 +122,18 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                        <configuration>
+                            <propertyName>jacoco.argLine</propertyName>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>prepare-agent-integration</id>
                         <goals>
                             <goal>prepare-agent-integration</goal>
                         </goals>
+                        <configuration>
+                            <propertyName>jacoco.argLine</propertyName>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>merge-results</id>
